<resources>
    <string name="app_name">WaffleStock</string>
    <string name="sign_in">Sign In</string>
    <string name="save">Save</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign Up</string>
    <string name="or_continue_with">Or continue with</string>
    <string name="email_or_username">Email or Username</string>
    <string name="pronouns">Pronouns</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="do_not_want_to_say">Do not want to say</string>
    <string name="type_your_username">Type your username...</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="year_of_birth">Year of Birth</string>
    <string name="country">Country</string>
    <string name="remember_me">Remember me</string>
    <string name="forgot_password"><u>Forgot password?</u></string>
    <string name="forgot_password_title">Forgot Password</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="type_your_email">Type your email...</string>
    <string name="type_your_gender">Type your gender...</string>
    <string name="type_your_education">Type your education</string>
    <string name="type_your_password">Type your password...</string>
    <string name="education">Education</string>
    <string name="you_have_to_agree_terms_and_condition_to_use_wafflestock">You have to agree terms and condition to use WaffleStock</string>
    <string name="_continue">Continue</string>
    <string name="validate_email">Validate Email</string>
    <string name="sent_to">Sent to</string>
    <string name="validate">Vallidate</string>
    <string name="resend_code">Resend Code</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="get_started">Get Started</string>
    <string name="send_code">Send code</string>
    <string name="welcome_back">Welcome back</string>
    <string name="personal_information">Personal Information</string>
    <string name="okay">Okay</string>
    <string name="cancel">Cancel</string>
    <string name="accept_terms_and_condition"><u>Accept terms and conditions</u></string>
    <string name="no_internet">No Internet</string>
    <string name="close">Close</string>
    <string name="error">Error</string>
    <string name="input_email">Please input email</string>
    <string name="input_password">Please input password</string>
    <string name="input_username">Please input username</string>
    <string name="please_confirm_your_password">Please confirm your password</string>
    <string name="hey_welcome">Hey! Welcome</string>
    <string name="how_can_we_call_you">Hi! How can we call you ?</string>
    <string name="ex_beginner_goat">Ex. Beginner Goat</string>
    <string name="this_information_will_be_display_on">This information will be display on your profile, you can fill it when you want!</string>
    <string name="password_changed">Password Changed!</string>
</resources>