<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_white_rect"
    android:paddingHorizontal="@dimen/vertical_baseline"
    android:paddingVertical="20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_can_we_call_you"
        android:textColor="@color/color_big_title"
        android:textStyle="bold"/>

    <EditText
        android:id="@+id/edtBio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_border"
        android:paddingHorizontal="@dimen/edittext_horizontal_padding"
        android:paddingVertical="@dimen/edittext_vertical_padding"
        android:layout_marginVertical="15dp"
        android:hint="@string/ex_beginner_goat"
        android:textSize="@dimen/edittext_font_size"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/this_information_will_be_display_on" />

    <TextView
        android:id="@+id/txvSave"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_blue_rect"
        android:text="@string/save"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/button_font_size"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/txvSkip"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:text="@string/skip"
        android:gravity="center"
        android:textColor="@color/color_big_title"
        android:textStyle="bold"
        android:layout_marginTop="10dp"/>

</LinearLayout>