<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="@dimen/vertical_baseline">

    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_back"
        android:background="@color/transparent"
        android:paddingVertical="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AppName-Logo"
        android:textSize="@dimen/app_name_font_size"
        android:textColor="@color/color_app_name"
        android:textStyle="bold"
        android:layout_gravity="center_horizontal"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/big_title_style"
        android:text="@string/new_password"
        android:layout_marginTop="50dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        style="@style/edittext_label_style"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_border"
        android:paddingVertical="@dimen/edittext_vertical_padding"
        android:paddingHorizontal="@dimen/edittext_horizontal_padding"
        android:hint="@string/type_your_password"
        android:textSize="@dimen/edittext_font_size"
        android:inputType="textPassword"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/confirm_password"
        style="@style/edittext_label_style"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/edtConfirmPwd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_grey_border"
        android:paddingVertical="@dimen/edittext_vertical_padding"
        android:paddingHorizontal="@dimen/edittext_horizontal_padding"
        android:hint="@string/type_your_password"
        android:textSize="@dimen/edittext_font_size"
        android:inputType="textPassword"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/txvChangePassword"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_blue_rect"
        android:text="@string/change_password"
        android:gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/button_font_size"
        android:layout_marginBottom="50dp"/>


</LinearLayout>