<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:paddingVertical="20dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="AppName-Logo"
        android:textSize="@dimen/app_name_font_size"
        android:textColor="@color/color_app_name"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:layout_weight="1"/>

    <TextView
        android:id="@+id/txvSignIn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_blue_border_rect"
        android:layout_marginHorizontal="@dimen/vertical_baseline"
        android:text="@string/sign_in"
        android:gravity="center"
        android:textSize="@dimen/button_font_size"
        android:textColor="@color/blue"/>

    <TextView
        android:id="@+id/txvSignUp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:background="@drawable/bg_blue_rect"
        android:layout_marginHorizontal="@dimen/vertical_baseline"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="@dimen/button_font_size"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginHorizontal="@dimen/vertical_baseline"
        android:gravity="center_vertical"
        android:paddingVertical="20dp">

        <View
            android:layout_width="0px"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/color_description"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/or_continue_with"
            android:layout_marginHorizontal="15dp"/>

        <View
            android:layout_width="0px"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/color_description"/>

    </LinearLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginHorizontal="@dimen/vertical_baseline"
        android:background="@drawable/bg_grey_border"
        android:paddingVertical="15dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/google_logo"
            android:layout_gravity="center"/>

    </FrameLayout>

</LinearLayout>